Qmq replicator delay